styles/style.css
/* ... */
/* landing-update-banner */
.landing-update-banner {
    position: relative;
    top: 0;
    margin-bottom: 20px;
    padding: 1em;
    background: #757575;
    color: #fff;
    text-align: center;
}

.landing-update-banner__link {
    color: inherit;
    text-decoration: underline;
}

@media (min-width:900px) {
    .landing-update-banner {
        margin-bottom: 0;
    }
}

/* section-text */
.section-text__main-container {
    display: flex;
    padding: 4.5em 0;
    flex-direction: column;
    font-size: 1rem;
    background: #363636;
    transition: transform 1s;
}

.section-text--hidden {
    display: none;
}

.section-text__unshelve-btn {
    display: none;
}

.section-text__text-container {
    display: flex;
    flex-direction: column;
    overflow: auto;
    padding: 0 1em;
    padding: 0 max(1em, env(safe-area-inset-right)) 0 max(1em, env(safe-area-inset-left));
    color: #fff;
    background: inherit;
    z-index: 1;
}

.section-text__header-container {
    display: flex;
    align-items: center;
    flex: 1 0 auto;
    font-size: 1.35em;
}

.section-text__shelve-btn {
    display: none;
    padding: 0;
    border: none;
    color: inherit;
    background: inherit;
    font-weight: 600;
}

.section-text__header-divider {
    display: none;
    margin: 0 1em;
    width: .1em;
    height: 1.25em;
    background: #fff;
}

.section-text__content {
    overflow: auto;
    line-height: 1.34em;
}

.section-text__content a {
    color: #5caac5;
    text-decoration: underline;
}

@media (min-width:480px) {
    .section-text__main-container {
        padding: 4.5em 0 1em 0;
    }
}

@media (min-width:900px) {
    .section-text--shelveable {
        position: absolute;
        right: 0;
        top: 50%;
        transform: translate(0, -50%);
        width: 38%;
        max-height: 94%;
        display: flex;
        flex-direction: column;
    }

    .section-text__main-container {
        min-height: 0;
        flex: 1;
        padding: 0;
    }

    .section-text__main-container--hidden {
        visibility: hidden;
    }

    .section-text__main-container--shelved {
        transform: translateX(100%);
    }

    .section-text__main-container--no-learn-more {
        padding-bottom: 1em;
    }

    .section-text__unshelve-btn, .section-text__shelve-btn, .section-text__header-divider {
        display: block;
    }

    .section-text__unshelve-btn {
        position: absolute;
        right: 0;
        top: 0;
        padding: 0.45em 1.15em 0.45em 0.45em;
        border: none;
        font-size: 1.35em;
        font-weight: 600;
        white-space: nowrap;
        color: #fff;
        background: #363636;
        transition: transform 1s;
        z-index: 0;
    }

    .section-text__unshelve-btn--hidden {
        visibility: hidden;
    }

    .section-text__unshelve-btn--shelved {
        transform: translateX(100%);
    }

    .section-text__text-container {
        padding: 0;
    }

    .section-text__header-container {
        padding: 1rem 1rem 0 1rem;
    }

    .section-text__content {
        padding: 0 1em;
    }
}

/* learn-more */
.learn-more {
    padding: 1em;
    padding: 1em max(1em, env(safe-area-inset-right)) 1em max(1em, env(safe-area-inset-left));
    color: #fff;
    background-color: #858585;
    font-size: 1rem;
}

.learn-more--in-section {
    flex: 0 0 auto;
    margin-bottom: 1em;
}

.learn-more__title {
    margin-bottom: 1rem;
    margin-block-start: 0;
    font-size: 1.35em;
}

.learn-more__btn {
    color: #f5f5f5;
    border: none;
    border-radius: 10px;
    font-size: 0.95em;
    font-weight: 600;
    padding: 9.5px 30px;
    margin: 4.5px 10px 4.5px 0px;
    background-color: #15404e;
}

@media (min-width:900px) {
    .learn-more {
        display: flex;
        align-items: baseline;
    }

    .learn-more--in-section {
        margin: 0;
    }

    .learn-more__title {
        margin: none;
        margin-block-end: 0;
    }

    .learn-more__btn-container {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        flex: 1;
    }

    .learn-more__btn {
        margin: 0.3125em;
        padding: 0.625em 2.5em;
        font-family: -apple-system, Arial;
    }
}

/* vid-metadata */
.vid-metadata {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    background: #cccccc;
    padding: 0.5em;
    font-weight: 600;
    font-size: 0.85em;
    line-height: 1.2em;
}

.vid-metadata--in-section {
    flex: 0 0 auto;
    order: 1;
}

.vid-metadata--in-modal {
    flex: 0 0 auto;
    box-shadow: 1px 0px 0 0px #444, 0px 1px 0 0px #444, -1px 0px 0 0px #444;
}

.vid-metadata__item {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: 0 3px;
    text-align: center;
}

.vid-metadata__key, .vid-metadata__text {
    color: #545454;
}

.vid-metadata__key {
    margin-right: 0.25em;
}

.vid-metadata__text {
    margin: 0 0.25em;
}

.vid-metadata__value {
    color: #325c69;
}

.vid-metadata__link {
    text-decoration: underline;
}

.vid-metadata__link--italicize {
    font-style: italic;
}

.vid-metadata__viewer-btn {
    box-sizing: border-box;
    height: 1.75em;
    width: 2.75em;
    margin: 1.5px 0 01.5px 0.8em;
    margin: 3px 0 01.5px 0.8em;
    transform: translateY(-0.1em);
    padding: 0;
    border: none;
    background-image: url(../img/viewerIcon.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-color: #fff0;
    cursor: pointer;
}

@media (min-width:900px) {
    .vid-metadata--in-section {
        order: initial;
    }

    .vid-metadata__viewer-btn {
        margin: 0 0 0 0.8em;
    }
}

/* content-img */
.content-img__fullscreen-container:fullscreen {
    display: flex;
    justify-content: center;
    align-items: center;
}
/* ... */

